--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,4 @@
-@import './variables.scss';
+@import "./variables.scss";
 
 @mixin container {
   max-width: 1400px;
@@ -21,145 +21,82 @@
 
 @mixin button {
   align-items: center;
-  background-color: $primary-color;
-  border: 1px solid $tint-color;
-  border-radius: 4px;
-  box-shadow: 0px 2px 1px 0px $tint-color;
-  color: $tint-color;
+  background-color: $yellow-color;
+  border: 0;
+  border-radius: 90px;
+  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
+  -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
+  -moz-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
+  color: $black-color;
   display: flex;
   font-size: 10px;
-  font-weight: 400;
+  font-weight: 700;
   justify-content: center;
-  letter-spacing: 1px;
   padding: 9px 12px;
   text-align: center;
   transition: all 120ms ease-out;
 
   &:hover {
-    background-color: $tint-color;
-    box-shadow: 0px 2px 5px 0px $tint-color;
-    color: $primary-color;
-    transform: translate(10px, 0);
+    background-color: $black-color;
+    box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
+    -webkit-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
+    color: $yellow-color;
+    transform: scale(1.05);
   }
 
   @media screen and (min-width: 375px) {
     font-size: 14px;
-    letter-spacing: 1.5px;
     padding: 12px 16px;
   }
 
   @media screen and (min-width: 425px) {
     font-size: 14px;
-    letter-spacing: 2px;
     padding: 16px 20px;
   }
 
   @media screen and (min-width: 768px) {
     font-size: 14px;
+    line-height: 24px;
     padding: 16px 20px;
   }
 
   @media screen and (min-width: 1024px) {
     font-size: 16px;
-    padding: 8px 32px;
+    line-height: 28px;
+    padding: 16px 32px;
   }
 }
 
 @mixin title {
-  align-items: center;
-  color: $secondary-color;
-  display: flex;
-  font-family: $font-sans;
+  color: $white-color;
+  text-align: center;
+  font-family: $font-spoof-trail;
+  font-size: 50px;
+  font-style: normal;
   font-weight: 700;
-  transition: all 150ms linear;
-
-  @media screen and (min-width: 375px) {
-    font-size: 20px;
-  }
-
-  @media screen and (min-width: 425px) {
-    font-size: 28px;
-  }
-
-  @media screen and (min-width: 768px) {
-    font-size: 32px;
-  }
-}
-
-@mixin blogTitle {
-  align-items: center;
-  color: $secondary-color;
-  display: flex;
-  font-family: $font-sans;
-  font-size: 20px;
-  font-weight: 700;
-  transition: all 150ms linear;
-
-  @media screen and (min-width: 425px) {
-    font-size: 28px;
-  }
-
-  @media screen and (min-width: 768px) {
-    font-size: 32px;
-  }
-}
-
-@mixin subtitle {
-  align-items: center;
-  color: $secondary-color;
-  display: flex;
-  font-family: $font-sans;
-  font-size: 16px;
-  font-weight: 700;
-  transition: all 150ms linear;
-
-  @media screen and (min-width: 425px) {
-    font-size: 20px;
-  }
-
-  @media screen and (min-width: 768px) {
-    font-size: 26px;
-  }
-}
-
-@mixin subSubtitle {
-  align-items: center;
-  color: $secondary-color;
-  display: flex;
-  font-family: $font-sans;
-  font-size: 14px;
-  font-weight: 700;
-  transition: all 150ms linear;
-
-  @media screen and (min-width: 425px) {
-    font-size: 16px;
-  }
-
-  @media screen and (min-width: 768px) {
-    font-size: 20px;
-  }
+  line-height: 60px;
 }
 
 @mixin description {
-  color: $alt-color;
-  font-family: $font-sans;
-  font-size: 12px;
-  line-height: 16px;
-  transition: all 150ms linear;
+  color: $white-color;
+  text-align: center;
+  font-family: $font-spoof-trail;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+}
 
-  b,
-  span {
-    color: $secondary-color;
-    font-weight: 700;
-  }
+@mixin common-text {
+  color: $black-color;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: $font-spoof-trail;
+  font-weight: 500;
+  line-height: 28px;
+  transition: all 150ms ease-out;
+}
 
-  @media screen and (min-width: 425px) {
-    font-size: 14px;
-    line-height: 20px;
-  }
-
-  @media screen and (min-width: 1024px) {
-    font-size: 16px;
-    line-height: 22px;
-  }
+@mixin yellow-highlight {
 }
