--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 
 @mixin container {
-  max-width: 1400px;
+  max-width: 1220px;
   margin: 0 auto;
   padding: 20px 10px;
   transition: all 150ms linear;
@@ -21,13 +21,11 @@
 
 @mixin button {
   align-items: center;
-  background-color: $yellow-color;
   border: 0;
   border-radius: 90px;
   box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
   -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
   -moz-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
-  color: $black-color;
   display: flex;
   font-size: 10px;
   font-weight: 700;
@@ -37,11 +35,9 @@
   transition: all 120ms ease-out;
 
   &:hover {
-    background-color: $black-color;
     box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
     -webkit-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
     -moz-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
-    color: $yellow-color;
     transform: scale(1.05);
   }
 
@@ -68,6 +64,44 @@
   }
 }
 
+@mixin buttonBlue {
+  @include button;
+  background-color: $blue-color;
+  color: $white-color;
+
+  &:hover {
+    background-color: $yellow-color;
+    color: $black-color;
+  }
+}
+
+@mixin buttonYellow {
+  @include button;
+  background-color: $yellow-color;
+  color: $black-color;
+
+  &:hover {
+    background-color: $black-color;
+    color: $yellow-color;
+  }
+}
+
+@mixin heroTitle {
+  color: $black-color;
+  text-align: center;
+  font-family: $font-spoof-trail;
+  font-size: 90px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 110px;
+
+  span {
+    border-radius: 22px;
+    background: $yellow-color;
+    padding: 0 10px;
+  }
+}
+
 @mixin title {
   color: $white-color;
   text-align: center;
@@ -79,7 +113,7 @@
 }
 
 @mixin description {
-  color: $white-color;
+  color: $black-color;
   text-align: center;
   font-family: $font-spoof-trail;
   font-size: 18px;
