--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,12 +3,9 @@
 
 .header {
   background-color: $white-color;
-  box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.2);
   position: fixed;
+  top: 0;
   transition: all 150ms ease-out;
-  transition: height 200ms ease-in;
   width: 100%;
   z-index: 99999999999999;
 
@@ -16,21 +13,31 @@
     box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.55);
     -webkit-box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.55);
     -moz-box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.55);
-    height: 60px;
-  }
 
-  > div:first-of-type {
-    background-color: $white-color;
-    height: 100%;
-    position: relative;
-    z-index: 1;
+    .header__container {
+      padding: 15px 10px;
+
+      @media screen and (min-width: 375px) {
+        padding: 15px 10px;
+      }
+
+      @media screen and (min-width: 425px) {
+        padding: 15px 15px;
+      }
+
+      @media screen and (min-width: 768px) {
+        padding: 15px 30px;
+      }
+    }
   }
 
   &__container {
     @include container;
     align-items: center;
     display: flex;
+    padding: 20px 10px;
     transition: all 150ms linear;
+    transition: padding 300ms $animation-2;
   }
 
   &__logo {
@@ -60,6 +67,7 @@
     button,
     a {
       @include common-text;
+      background-color: transparent;
       display: flex;
       margin: 0 23px;
       padding: 12px 0;
@@ -79,13 +87,31 @@
   &__buttons-item {
     button {
       @include common-text;
-      white-space: nowrap;
+      background-color: transparent;
+      height: 52px;
       padding: 12px 24px;
+      transition: all 120ms ease-in-out;
+      white-space: nowrap;
     }
 
     &:last-of-type button {
+      background-color: transparent;
       border: 1px solid $black-color;
       border-radius: 90px;
+      box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
+      -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
+      -moz-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
+      transition: all 120ms ease-in-out;
+
+      &:hover {
+        background-color: $blue-color;
+        border: 1px solid $blue-color;
+        box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
+        -webkit-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
+        -moz-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
+        color: $white-color;
+        transform: scale(1.05);
+      }
     }
   }
 }
