--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -103,13 +103,19 @@
 }
 
 @mixin title {
-  color: $white-color;
+  color: $black-color;
   text-align: center;
   font-family: $font-spoof-trail;
   font-size: 50px;
   font-style: normal;
   font-weight: 700;
   line-height: 60px;
+
+  span {
+    border-radius: 22px;
+    background: $yellow-color;
+    padding: 0 10px;
+  }
 }
 
 @mixin description {
