--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $red-color: #f2604b;
 $white-color: #ffffff;
 
 $font-spoof-trail: var(--font-spoof-trial), sans-serif;
+$font-inter: var(--font-inter), sans-serif;
 
 $animation: cubic-bezier(0.55, -0.19, 0.59, 1.45);
 $animation-2: cubic-bezier(0.55, -0.19, 0.59, 0.95);
