--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -101,7 +101,7 @@
       box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
       -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
       -moz-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
-      transition: all 120ms ease-in-out;
+      transition: all 120ms ease-out;
 
       &:hover {
         background-color: $blue-color;
@@ -110,7 +110,7 @@
         -webkit-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
         -moz-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
         color: $white-color;
-        transform: scale(1.05);
+        transform: scale(1.1);
       }
     }
   }
