--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -15,7 +15,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    padding: 30px;
+    padding: 80px 30px;
   }
 }
 
@@ -29,16 +29,31 @@
   display: flex;
   font-size: 10px;
   font-weight: 700;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 9px 12px;
   text-align: center;
   transition: all 120ms ease-out;
+
+  &::after {
+    content: "➜";
+    padding: 0;
+    opacity: 0;
+    transition: all 120ms ease-out;
+    width: 0;
+  }
 
   &:hover {
     box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
     -webkit-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
     -moz-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
-    transform: scale(1.05);
+    transform: translate(20px, 0);
+
+    &::after {
+      content: "➜";
+      padding: 0 0 0 16px;
+      opacity: 1;
+      width: 16px;
+    }
   }
 
   @media screen and (min-width: 375px) {
@@ -70,8 +85,8 @@
   color: $white-color;
 
   &:hover {
-    background-color: $yellow-color;
-    color: $black-color;
+    background-color: $black-color;
+    color: $yellow-color;
   }
 }
 
