--- a/src/components/PartnersSection/PartnersSection.scss
+++ b/src/components/PartnersSection/PartnersSection.scss
@@ -24,31 +24,12 @@
     }
 
     &-item {
-      height: 66px;
+      opacity: 0.4;
       position: relative;
+      transition: all 120ms ease-out;
 
-      &:nth-of-type(1) {
-        height: 43px;
-        width: 152px;
-      }
-
-      &:nth-of-type(2) {
-        width: 164px;
-      }
-
-      &:nth-of-type(3) {
-        height: 60px;
-        width: 90px;
-      }
-
-      &:nth-of-type(4) {
-        height: 58px;
-        width: 88px;
-      }
-
-      &:nth-of-type(5) {
-        height: 48px;
-        width: 202px;
+      &:hover {
+        opacity: 0.9;
       }
     }
   }
