--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $black-color: #000000;
+$black-color-alt: #2d2323;
 $grey-color: #ecf0f6;
 $yellow-color: #fedf22;
 $yellow-color-hover: #ffef33;
@@ -7,6 +8,7 @@ $blue-color: #3355ff;
 $blue-color-hover: #4466ff;
 $red-color: #f2604b;
 $white-color: #ffffff;
+$white-color-alt: #f0f0f0;
 $light-white-color: #f9faf5;
 
 $font-spoof-trail: var(--font-spoof-trial), sans-serif;
