--- a/src/components/ImageCard/ImageCard.scss
+++ b/src/components/ImageCard/ImageCard.scss
@@ -14,12 +14,26 @@
   transition: all 200ms $animation-2;
   width: 100%;
 
+  &--big {
+    position: relative;
+  }
+
   &:last-of-type {
     height: 453px;
   }
 
   &__content {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
     padding: 20px;
+  }
+
+  &--big &__content {
+    align-items: flex-start;
+    gap: 23px;
+    height: 100%;
+    z-index: 1;
   }
 
   &__title {
@@ -29,7 +43,13 @@
     font-style: normal;
     font-weight: 700;
     line-height: 20px;
-    margin: 0 0 5px 0;
+  }
+
+  &--big &__title {
+    @include title;
+    font-family: $font-spoof-trail;
+    max-width: 280px;
+    text-align: left;
   }
 
   &__description {
@@ -41,6 +61,18 @@
     line-height: 16px;
   }
 
+  &--big &__description {
+    font-family: $font-inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    max-width: 280px;
+  }
+
+  &__link {
+    @include buttonBlue;
+  }
+
   &__image {
     display: flex;
     height: 50%;
@@ -49,7 +81,13 @@
     width: 100%;
 
     img {
+      position: absolute;
       bottom: 0;
     }
+  }
+
+  &--big &__image {
+    position: absolute;
+    height: 100%;
   }
 }
