--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -98,6 +98,10 @@
   &:hover {
     background-color: $black-color;
     color: $yellow-color;
+
+    svg path {
+      fill: $yellow-color;
+    }
   }
 }
 
