feat: add price section and plan component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,15 +1,18 @@
 $black-color: #000000;
 $black-color-alt: #2d2323;
+$black-color-alt-opacity: #2d23231a;
 $grey-color: #ecf0f6;
 $yellow-color: #fedf22;
 $yellow-color-hover: #ffef33;
 $yellow-color-dark: #dcb400;
+$yellow-color-alt: #e4d99a;
 $blue-color: #3355ff;
 $blue-color-hover: #4466ff;
 $red-color: #f2604b;
 $white-color: #ffffff;
 $white-color-alt: #f0f0f0;
 $light-white-color: #f9faf5;
+$cream-color: #fff8da;
 
 $font-spoof-trail: var(--font-spoof-trial), sans-serif;
 $font-inter: var(--font-inter), sans-serif;
