feat: add accrodion

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $blue-color: #3355ff;
 $blue-color-hover: #4466ff;
 $red-color: #f2604b;
 $white-color: #ffffff;
+$white-color-opacity: #ffffff8c;
 $white-color-alt: #f0f0f0;
 $light-white-color: #f9faf5;
 $cream-color: #fff8da;
