--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 $black-color: #000000;
 $black-color-alt: #2d2323;
+$black-color-light: #413b3b;
 $black-color-alt-opacity: #2d23231a;
 $grey-color: #ecf0f6;
 $yellow-color: #fedf22;
