feat: add compare plan to pricing

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,8 @@ $white-color: #ffffff;
 $white-color-opacity: #ffffff8c;
 $white-color-alt: #f0f0f0;
 $light-white-color: #f9faf5;
+$white-blue-color: #c7d7e8;
+$white-blue-color-dark: #d3d8de;
 $cream-color: #fff8da;
 $cream-color-light: #fff8b7;
 
