--- a/src/components/ComparePlans/ComparePlans.scss
+++ b/src/components/ComparePlans/ComparePlans.scss
@@ -5,6 +5,9 @@
   background-color: $white-color;
   border-radius: 16px;
   border: 1px solid $white-blue-color;
+  box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.47);
+  -webkit-box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.47);
   overflow: hidden;
   width: 100%;
 
