--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,12 +3,14 @@ $black-color-alt: #2d2323;
 $black-color-light: #413b3b;
 $black-color-alt-opacity: #2d23231a;
 $grey-color: #ecf0f6;
+$grey-color-dark: #9e9fa4;
 $yellow-color: #fedf22;
 $yellow-color-hover: #ffef33;
 $yellow-color-dark: #dcb400;
 $yellow-color-alt: #e4d99a;
 $blue-color: #3355ff;
 $blue-color-hover: #4466ff;
+$blue-color-dark: #243d6f;
 $red-color: #f2604b;
 $white-color: #ffffff;
 $white-color-opacity: #ffffff8c;
