--- a/src/components/PartnersSection/PartnersSection.scss
+++ b/src/components/PartnersSection/PartnersSection.scss
@@ -24,13 +24,18 @@
     }
 
     &-item {
+      display: flex;
+    }
+
+    &-link {
       opacity: 0.4;
+      padding: 20px 0;
       position: relative;
       transition: all 120ms ease-out;
 
       &:hover {
         opacity: 0.9;
-        transform: translate(0, -8px) scale(1.08);
+        transform: translate(0, -10px) scale(1);
       }
     }
   }
