--- a/src/components/ListSection/ListSection.scss
+++ b/src/components/ListSection/ListSection.scss
@@ -3,6 +3,7 @@
 
 .list-section {
   background-color: $white-color;
+  overflow: hidden;
   position: relative;
 
   > img {
@@ -13,10 +14,9 @@
     @include container;
     display: flex;
     position: relative;
-    z-index: 1;
-
     padding: 20px 10px;
     transition: all 150ms linear;
+    z-index: 1;
 
     @media screen and (min-width: 375px) {
       padding: 50px 10px;
@@ -32,10 +32,7 @@
   }
 
   &__image {
-    position: relative;
     min-height: 100%;
-    width: 567px;
-    height: 567px;
 
     img {
       width: 100%;
@@ -47,7 +44,13 @@
     display: flex;
     flex-direction: column;
     margin: 0 0 0 86px;
-    max-width: 460px;
+    max-width: 500px;
+    width: 100%;
+
+    &--switched-order {
+      margin: 0 86px 0 0;
+      order: -1;
+    }
   }
 
   &__title {
