feat: add animated cards in big cards section

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $yellow-color: #fedf22;
 $yellow-color-hover: #ffef33;
 $yellow-color-dark: #dcb400;
 $yellow-color-alt: #e4d99a;
+$yellow-color-light: #f6eece;
 $blue-color: #3355ff;
 $blue-color-hover: #4466ff;
 $blue-color-dark: #243d6f;
