feat: add customer management and hassle free cards and fix ui issues in athoer animated cards

--- a/src/components/AnimatedCards/Robot/Robot.scss
+++ b/src/components/AnimatedCards/Robot/Robot.scss
@@ -13,6 +13,10 @@
   top: 132.5px;
   width: calc(67px - 2 * 3.8px);
 
+  img {
+    pointer-events: none;
+  }
+
   &__todo {
     align-items: center;
     display: flex;
