--- a/src/components/AnimatedCards/AddOns/AddOns.scss
+++ b/src/components/AnimatedCards/AddOns/AddOns.scss
@@ -11,15 +11,18 @@
   overflow: hidden;
   position: relative;
 
+  img {
+    pointer-events: none;
+  }
+
   &__content {
     align-items: flex-start;
     display: flex;
     flex-direction: column;
     gap: 23px;
-    height: 100%;
-    left: 40px;
+    height: calc(100% - 2 * 40px);
+    padding: 65px 40px;
     position: absolute;
-    top: 65px;
     z-index: 1;
   }
 
@@ -27,6 +30,7 @@
     @include title;
     color: $black-color;
     font-family: $font-spoof-trail;
+    font-size: 45px;
     font-style: normal;
     font-weight: 700;
     text-align: left;
@@ -48,7 +52,6 @@
 
   &__image {
     position: absolute;
-    pointer-events: none;
 
     &--18 {
       left: 0;
@@ -59,7 +62,6 @@
 
   &__box-size {
     opacity: 0;
-    pointer-events: none;
     width: 100%;
   }
 
@@ -77,7 +79,6 @@
       -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
       margin: 4.5px;
       overflow: hidden;
-      pointer-events: none;
       width: 180px;
     }
   }
