--- a/src/components/AnimatedCards/CustomerManagement/CustomerManagement.scss
+++ b/src/components/AnimatedCards/CustomerManagement/CustomerManagement.scss
@@ -1,8 +1,8 @@
 @import "../../../styles/variables";
 @import "../../../styles/mixins";
 
-.ship {
-  background-color: $yellow-color-light;
+.customer-management {
+  background-color: $grey-color;
   border-radius: 24px;
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
   -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
@@ -20,10 +20,12 @@
     display: flex;
     flex-direction: column;
     gap: 23px;
-    height: calc(100% - 2 * 40px);
+    height: calc(100% - 2 * 65px);
+    max-width: 460px;
     padding: 65px 40px;
     position: absolute;
-    z-index: 1;
+    top: 0;
+    z-index: 2;
   }
 
   &__title {
@@ -43,28 +45,53 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-    max-width: 350px;
   }
 
   &__image {
     position: absolute;
 
     &--1 {
-      right: 0;
-      top: 0;
-      max-width: 550px;
+      bottom: 0;
+      left: 20px;
+      max-width: 250px;
+      z-index: 1;
     }
 
     &--2 {
+      bottom: -20px;
+      max-width: 380px;
+      right: 0;
+      z-index: 1;
+    }
+
+    &--3 {
       bottom: 0;
-      left: 30px;
-      max-width: 422px;
-      transform-origin: center 195px;
+      left: 0;
+      max-width: 350px;
+      z-index: 0;
     }
   }
 
   &__box-size {
     opacity: 0;
     width: 100%;
+  }
+
+  &__components {
+    columns: 2;
+    max-width: 380px;
+    position: absolute;
+    top: 0px;
+    right: -110px;
+
+    img {
+      border-radius: 16px;
+      box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
+      -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
+      -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
+      margin: 4.5px;
+      overflow: hidden;
+      width: 180px;
+    }
   }
 }
