--- a/src/components/AnimatedCards/EasyManagement/EasyManagement.scss
+++ b/src/components/AnimatedCards/EasyManagement/EasyManagement.scss
@@ -9,8 +9,11 @@
   -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
   min-height: 100%;
   overflow: hidden;
-  pointer-events: none;
   position: relative;
+
+  img {
+    pointer-events: none;
+  }
 
   &__image {
     position: absolute;
@@ -53,7 +56,6 @@
 
   &__box-size {
     opacity: 0;
-    pointer-events: none;
     width: 100%;
   }
 }
