--- a/src/components/AnimatedCards/SmartControl/SmartControl.scss
+++ b/src/components/AnimatedCards/SmartControl/SmartControl.scss
@@ -11,6 +11,10 @@
   -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
   -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
 
+  img {
+    pointer-events: none;
+  }
+
   &__image {
     position: absolute;
 
@@ -30,29 +34,36 @@
       bottom: 0;
       max-width: 350px;
       left: 0;
+
+      > div {
+        position: relative;
+
+        img {
+          width: 100%;
+        }
+
+        .lines-list {
+          align-items: flex-end;
+          bottom: 65px;
+          display: flex;
+          gap: 17.35px;
+          left: 70px;
+          max-width: 350px;
+          position: absolute;
+
+          &__item {
+            background-color: $blue-color;
+            border-radius: 12.631px 12.631px 0px 0px;
+            height: 10px;
+            width: 9.5px;
+          }
+        }
+      }
     }
   }
 
   &__box-size {
     opacity: 0;
-    pointer-events: none;
     width: 100%;
-  }
-
-  &__lines-list {
-    align-items: flex-end;
-    bottom: 65px;
-    display: flex;
-    gap: 17.35px;
-    left: 70px;
-    max-width: 350px;
-    position: absolute;
-
-    &-item {
-      background-color: $blue-color;
-      border-radius: 12.631px 12.631px 0px 0px;
-      height: 10px;
-      width: 9.5px;
-    }
   }
 }
