--- a/src/components/AnimatedCardsSection/AnimatedCardsSection.scss
+++ b/src/components/AnimatedCardsSection/AnimatedCardsSection.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 @import "../../styles/mixins";
 
-.animated-cards {
+.animated-cards-section {
   display: flex;
   justify-content: space-between;
   gap: 24px;
@@ -20,7 +20,7 @@
     position: relative;
     width: 280px;
 
-    img {
+    > img {
       width: 100%;
     }
   }
