refactor: make a separate component out of big cards, add big-cards-section in product-tour and handle there the carousel buttons

--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -101,7 +101,7 @@
 
     &--disabled {
       cursor: auto;
-      opacity: 0.6;
+      opacity: 0.6 !important;
       pointer-events: none;
     }
   }
