--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $black-color-light: #413b3b;
 $black-color-alt-opacity: #2d23231a;
 $grey-color: #ecf0f6;
 $grey-color-dark: #9e9fa4;
+$grey-color-darker: #767676;
 $yellow-color: #fedf22;
 $yellow-color-hover: #ffef33;
 $yellow-color-dark: #dcb400;
