--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -46,11 +46,12 @@
     box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
     -webkit-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
     -moz-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
-    transform: translate(-10px, 0);
+    transform: translate(-6px, 0);
+    padding: 9px 9px 9px 12px;
 
     &::after {
       content: "➜";
-      padding: 0 0 0 16px;
+      padding: 0 0 0 8px;
       opacity: 1;
       width: 16px;
     }
@@ -59,23 +60,55 @@
   @media screen and (min-width: 375px) {
     font-size: 14px;
     padding: 12px 16px;
+
+    &:hover {
+      padding: 9px 9px 9px 12px;
+
+      &::after {
+        padding: 0 0 0 4px;
+      }
+    }
   }
 
   @media screen and (min-width: 425px) {
     font-size: 14px;
     padding: 16px 20px;
+
+    &:hover {
+      padding: 16px 16px 16px 20px;
+
+      &::after {
+        padding: 0 0 0 8px;
+      }
+    }
   }
 
   @media screen and (min-width: 768px) {
     font-size: 14px;
     line-height: 24px;
     padding: 16px 20px;
+
+    &:hover {
+      padding: 16px 16px 16px 20px;
+
+      &::after {
+        padding: 0 0 0 8px;
+      }
+    }
   }
 
   @media screen and (min-width: 1024px) {
     font-size: 16px;
     line-height: 28px;
     padding: 16px 32px;
+
+    &:hover {
+      padding: 16px 16px 16px 32px;
+
+      &::after {
+        padding: 0 0 0 8px;
+      }
+    }
   }
 }
 
@@ -113,6 +146,17 @@
   &:hover {
     background-color: $white-color;
     color: $black-color-alt;
+  }
+}
+
+@mixin buttonWhite {
+  @include button;
+  background-color: $grey-color;
+  color: $black-color;
+
+  &:hover {
+    background-color: $white-color-alt;
+    color: $black-color;
   }
 }
 
