--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,7 +7,7 @@
   top: 0;
   transition: all 150ms ease-out;
   width: 100%;
-  z-index: 99999999999999;
+  z-index: 9991;
 
   &--is-scrolled {
     box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.55);
@@ -34,6 +34,7 @@
   &__container {
     @include container;
     align-items: center;
+    background-color: $white-color;
     display: flex;
     padding: 20px 10px;
     transition: all 150ms linear;
@@ -76,6 +77,18 @@
       &--is-scrolled {
         padding: 19px 0;
       }
+    }
+
+    button span {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      transform-origin: center center;
+      transition: all 120ms ease-out;
+    }
+
+    &--active button span {
+      transform: rotate(180deg);
     }
   }
 
