--- a/src/components/AnimatedCardsSection/AnimatedCardsSection.scss
+++ b/src/components/AnimatedCardsSection/AnimatedCardsSection.scss
@@ -11,6 +11,9 @@
   align-items: center;
   background-color: $grey-color;
   border-radius: 30px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
