--- a/src/components/AnimatedCards/OngoingUpdates/OngoingUpdates.scss
+++ b/src/components/AnimatedCards/OngoingUpdates/OngoingUpdates.scss
@@ -64,11 +64,11 @@
 
     &--3 {
       right: 0;
+      border-radius: 16px;
       bottom: 0;
       box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
       -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
       -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-      border-radius: 16px;
       max-width: 650px;
 
       > div {
@@ -86,6 +86,16 @@
           }
 
           &__image {
+            border-radius: 16px 16px 0 0;
+
+            &--4,
+            &--5,
+            &--6 {
+              box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.47);
+              -webkit-box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.47);
+              -moz-box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.47);
+            }
+
             &--4 {
               bottom: 0;
               right: 380px;
