feat: add 4 theme animated cards, add common section, add commonssections in themes route

--- a/src/components/BigCardsSection/BigCardsSection.scss
+++ b/src/components/BigCardsSection/BigCardsSection.scss
@@ -13,5 +13,13 @@
     display: flex;
     gap: 25px;
     width: 100%;
+
+    &--wrap {
+      flex-wrap: wrap;
+
+      > li {
+        width: calc((100% - 25px) / 2);
+      }
+    }
   }
 }
