--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,10 +10,13 @@ $yellow-color-hover: #ffef33;
 $yellow-color-dark: #dcb400;
 $yellow-color-alt: #e4d99a;
 $yellow-color-light: #f6eece;
+$yellow-color-light-2: #ffeab9;
 $blue-color: #3355ff;
 $blue-color-hover: #4466ff;
 $blue-color-dark: #243d6f;
 $red-color: #f2604b;
+$red-color-dark: #a46565;
+$red-color-light: #ffe1cb;
 $white-color: #ffffff;
 $white-color-opacity: #ffffff8c;
 $white-color-alt: #f0f0f0;
@@ -22,6 +25,8 @@ $white-blue-color: #c7d7e8;
 $white-blue-color-dark: #d3d8de;
 $cream-color: #fff8da;
 $cream-color-light: #fff8b7;
+$purple-color: #d3bafe;
+$green-color: #95edb2;
 
 $cream-gradient-dark: linear-gradient(0deg, #fff8b7 0%, #ffefb7 100%);
 $cream-gradient-light: linear-gradient(180deg, #fffbe7 0%, #fffcef 22.67%),
