--- a/src/components/IconCardSection/IconCard/IconCard.scss
+++ b/src/components/IconCardSection/IconCard/IconCard.scss
@@ -3,8 +3,10 @@
 
 .icon-card {
   align-items: center;
-  background-color: $yellow-color;
   border-radius: 24px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
   display: flex;
   flex-direction: column;
   padding: 40px;
