--- a/src/components/IconCardSection/IconCardSection.scss
+++ b/src/components/IconCardSection/IconCardSection.scss
@@ -2,8 +2,8 @@
 @import "../../styles/mixins";
 
 .icon-card-section {
-  background-color: $blue-color;
   position: relative;
+  overflow: hidden;
 
   > img {
     z-index: 0;
@@ -28,12 +28,10 @@
 
   &__title {
     @include title;
-    color: $white-color;
   }
 
   &__icon {
     align-items: center;
-    background-color: $yellow-color;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -48,5 +46,45 @@
     align-items: center;
     display: flex;
     gap: 24px;
+
+    &--wrap {
+      flex-wrap: wrap;
+
+      > li {
+        width: calc((100% - 24px * 2) / 3);
+      }
+    }
+  }
+
+  &--white.icon-card-section {
+    background-color: $grey-color;
+
+    .icon-card-section__title {
+      color: $black-color;
+    }
+
+    .icon-card-section__icon {
+      background-color: $blue-color;
+    }
+
+    .icon-card {
+      background-color: $white-color;
+    }
+  }
+
+  &--yellow.icon-card-section {
+    background-color: $blue-color;
+
+    .icon-card-section__title {
+      color: $white-color;
+    }
+
+    .icon-card-section__icon {
+      background-color: $yellow-color;
+    }
+
+    .icon-card {
+      background-color: $yellow-color;
+    }
   }
 }
