--- a/src/components/AnimatedCards/Theme/Theme.scss
+++ b/src/components/AnimatedCards/Theme/Theme.scss
@@ -146,6 +146,12 @@
         right: -20px;
         max-width: 300px;
         z-index: 1;
+
+        &.theme-card__image--mobile {
+          max-width: 400px;
+          right: auto;
+          left: calc(50% - 400px / 2);
+        }
       }
     }
 
