--- a/src/components/ImageCard/ImageCard.scss
+++ b/src/components/ImageCard/ImageCard.scss
@@ -11,6 +11,7 @@
   flex-direction: column;
   height: 100%;
   overflow: hidden;
+  position: relative;
   transition: all 200ms $animation-2;
   width: 100%;
 
@@ -27,6 +28,7 @@
     flex-direction: column;
     gap: 5px;
     padding: 20px;
+    z-index: 1;
   }
 
   &--big &__content {
@@ -74,15 +76,18 @@
   }
 
   &__image {
+    left: 0;
+    bottom: -15px;
     display: flex;
     height: 50%;
     margin: auto 0 0 0;
-    position: relative;
+    max-width: 250px;
+    position: absolute;
     width: 100%;
+    z-index: 0;
 
     img {
-      position: absolute;
-      bottom: 0;
+      width: 100%;
     }
   }
 
