--- a/src/components/SlideshowSection/SlideshowSection.scss
+++ b/src/components/SlideshowSection/SlideshowSection.scss
@@ -6,7 +6,7 @@
 }
 
 .slideshow-section {
-  animation: scroll-left-right 100s linear infinite;
+  animation: scroll-left-right 250s linear infinite;
   align-self: flex-start;
   align-items: center;
   display: flex;
@@ -14,6 +14,9 @@
   &__item {
     border: 18.5px solid $grey-color;
     border-radius: 24px;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
+    -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
+    -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
     height: 360px;
     margin: 0 15px;
     overflow: hidden;
