--- a/src/components/AnimatedCard/BuiltForGrowth.scss
+++ b/src/components/AnimatedCard/BuiltForGrowth.scss
@@ -1,17 +1,23 @@
 @import "../../styles/variables";
 @import "../../styles/mixins";
 
-@mixin smartControl {
+@mixin builtForGrowth {
   &--1 {
     right: 0;
-    top: 0;
+    bottom: 0;
     max-width: 550px;
+    z-index: 0;
   }
 
   &--2 {
     max-width: 380px;
     right: 0;
     bottom: 0;
+    border-radius: 19px 0 0 0;
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
+    -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
+    -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
+    z-index: 2;
   }
 
   &--3 {
@@ -24,5 +30,6 @@
     overflow: hidden;
     left: -20px;
     transform: scale(0.65) !important;
+    z-index: 3;
   }
 }
