--- a/src/components/IconCardSection/IconCard/IconCard.scss
+++ b/src/components/IconCardSection/IconCard/IconCard.scss
@@ -9,7 +9,8 @@
   -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  height: 100%;
+  padding: 40px 24px;
 
   &__icon svg {
     height: 64px;
