--- a/src/components/IconCardSection/IconCardSection.scss
+++ b/src/components/IconCardSection/IconCardSection.scss
@@ -49,9 +49,12 @@
 
     &--wrap {
       flex-wrap: wrap;
+      align-items: stretch;
 
       > li {
         width: calc((100% - 24px * 2) / 3);
+        display: flex;
+        flex-direction: column;
       }
     }
   }
