--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -10,6 +10,10 @@
     background-color: $grey-color;
   }
 
+  &--yellow {
+    background-color: $yellow-color;
+  }
+
   > img {
     left: 50%;
     height: 100%;
