--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -16,6 +16,8 @@
 @import "./Delivery";
 @import "./BuiltForGrowth";
 @import "./Customization";
+@import "./Vision";
+@import "./WeAre";
 
 .animated-card {
   border-radius: 24px;
@@ -172,5 +174,13 @@
 
   &__customization {
     @include customization;
+  }
+
+  &__vision {
+    @include vision;
+  }
+
+  &__we-are {
+    @include weAre;
   }
 }
