--- a/src/components/SlideshowSection/SlideshowSection.scss
+++ b/src/components/SlideshowSection/SlideshowSection.scss
@@ -12,6 +12,7 @@
   display: flex;
 
   &__item {
+    background-color: $grey-color;
     border: 18.5px solid $grey-color;
     border-radius: 24px;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
