--- a/src/components/SlideshowSection/SlideshowSection.scss
+++ b/src/components/SlideshowSection/SlideshowSection.scss
@@ -21,10 +21,9 @@
     height: 360px;
     margin: 0 15px;
     overflow: hidden;
-    width: 360px;
 
     img {
-      width: 100%;
+      height: 100%;
     }
   }
 
