--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $black-color-alt-opacity: #2d23231a;
 $grey-color: #ecf0f6;
 $grey-color-dark: #9e9fa4;
 $grey-color-darker: #767676;
+$grey-blue-color: #c7d7ef;
 $yellow-color: #fedf22;
 $yellow-color-hover: #ffef33;
 $yellow-color-dark: #dcb400;
