--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -26,7 +26,7 @@
   -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
   display: flex;
   height: 500px;
-  max-width: 565px;
+  width: 100%;
   overflow: hidden;
   position: relative;
 
