--- a/src/components/IconCardSection/IconCard/IconCard.scss
+++ b/src/components/IconCardSection/IconCard/IconCard.scss
@@ -10,9 +10,15 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  justify-content: space-between;
   padding: 40px 24px;
 
-  &__icon svg {
+  &--align-left {
+    align-items: flex-start;
+  }
+
+  &__icon svg,
+  &__icon img {
     height: 64px;
     width: 64px;
   }
@@ -38,5 +44,36 @@
     font-weight: 400;
     line-height: 28px;
     text-align: center;
+  }
+
+  &__link {
+    align-items: center;
+    color: $blue-color;
+    display: flex;
+    font-family: $font-spoof-trail;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px;
+    margin: 24px 0 0 0;
+
+    &:hover {
+      span {
+        opacity: 1;
+        transform: translate(10px, 0);
+      }
+    }
+
+    span {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      opacity: 0;
+      transition: all 150ms ease-out;
+
+      svg path {
+        fill: $blue-color;
+      }
+    }
   }
 }
