--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -18,6 +18,8 @@
 @import "./Customization";
 @import "./Vision";
 @import "./WeAre";
+@import "./Blog";
+@import "./HowToGuides";
 
 .animated-card {
   border-radius: 24px;
@@ -59,7 +61,7 @@
     padding: 40px;
     position: absolute;
     top: 0;
-    z-index: 1;
+    z-index: 20;
   }
 
   &__title {
@@ -86,6 +88,10 @@
     font-weight: 400;
     line-height: 30px;
     max-width: 350px;
+  }
+
+  &__link {
+    @include buttonBlue;
   }
 
   &__background {
@@ -182,5 +188,13 @@
 
   &__we-are {
     @include weAre;
+  }
+
+  &__blog {
+    @include blog;
+  }
+
+  &__how-to-guides {
+    @include howToGuides;
   }
 }
