--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -2,9 +2,13 @@
 @import "../../styles/mixins";
 
 .common-section {
-  background-color: $white-color;
   overflow: hidden;
   position: relative;
+
+  &--offset {
+    margin: 112px 0 0 0;
+    padding-top: 120px;
+  }
 
   &--grey {
     background-color: $grey-color;
@@ -12,6 +16,10 @@
 
   &--yellow {
     background-color: $yellow-color;
+  }
+
+  &--white {
+    background-color: $white-color;
   }
 
   > img {
@@ -22,29 +30,22 @@
     z-index: 0;
   }
 
-  &__image {
-    position: relative;
-    z-index: 1;
-  }
-
   &__container {
     @include container;
     align-items: center;
     display: flex;
     flex-direction: column;
+    gap: 40px;
     position: relative;
-    z-index: 1;
-  }
-
-  &__content {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    margin: 0 0 30px 0;
+    z-index: 2;
   }
 
   &__title {
+    @include heroTitle;
+    overflow: hidden;
+  }
+
+  &__subtitle {
     color: $black-color;
     text-align: center;
     font-family: $font-spoof-trail;
@@ -60,19 +61,61 @@
     }
   }
 
+  &__item {
+    @include description;
+    align-items: center;
+    display: flex;
+    transition: all 120ms ease-out;
+
+    &:hover {
+      transform: translate(0, -5px) scale(1.08);
+    }
+
+    span:first-of-type {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      margin: 0 4px 0 0;
+    }
+  }
+
   &__description {
-    color: $black-color;
-    text-align: center;
-    font-family: $font-inter;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
+    @include description;
+    align-items: center;
+    display: flex;
+    gap: 30px;
+
+    span {
+      align-items: center;
+      display: flex;
+      gap: 5px;
+    }
+  }
+
+  &__button {
+    @include buttonBlue;
+    width: max-content;
+  }
+
+  &__component {
+    width: 100%;
   }
 
   &__image {
     margin: 0 auto;
     max-width: 1220px;
+    position: relative;
+    z-index: 1;
+
+    &.section-separator {
+      transform: translate(0, 72px);
+      margin: -72px auto 0 auto;
+
+      &-big {
+        margin: -121px auto 0 auto;
+        transform: translate(0, 121px);
+      }
+    }
 
     img {
       border-radius: 24px 24px 0px 0px;
@@ -80,6 +123,24 @@
       -webkit-box-shadow: 0px -2px 16px 1px rgba(0, 0, 0, 0.47);
       -moz-box-shadow: 0px -2px 16px 1px rgba(0, 0, 0, 0.47);
       width: 100%;
+    }
+  }
+
+  &__separator-image {
+    align-items: center;
+    display: flex;
+    width: 100vw;
+
+    &.section-separator {
+      span {
+        height: 72px;
+      }
+
+      &-big {
+        span {
+          height: 121px;
+        }
+      }
     }
   }
 }
