--- a/src/components/AnimatedCard/OngoingUpdates.scss
+++ b/src/components/AnimatedCard/OngoingUpdates.scss
@@ -13,9 +13,9 @@
 
   &--1 {
     border-radius: 16px 16px 0 0;
-    bottom: 0;
-    max-width: 520px;
-    right: 0;
+    bottom: -200px;
+    max-width: 560px;
+    right: -60px;
     z-index: 1;
   }
 
