--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -80,6 +80,10 @@
           align-items: center;
           display: flex;
           justify-content: center;
+
+          path {
+            fill: $blue-color;
+          }
         }
       }
     }
