--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,7 +7,7 @@ $grey-color-dark: #9e9fa4;
 $grey-color-darker: #767676;
 $grey-blue-color: #c7d7ef;
 $yellow-color: #fedf22;
-$yellow-color-hover: #ffef33;
+$yellow-color-hover: #ffe587;
 $yellow-color-dark: #dcb400;
 $yellow-color-alt: #e4d99a;
 $yellow-color-light: #f6eece;
