--- a/src/components/AnimatedCard/Marketing.scss
+++ b/src/components/AnimatedCard/Marketing.scss
@@ -3,14 +3,14 @@
 
 @mixin marketing {
   &--1 {
-    bottom: 0;
-    border-radius: 16px 0 0 0;
+    bottom: -200px;
+    border-radius: 16px 16px 0 0;
     box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
     -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
     -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
     max-width: 520px;
     overflow: hidden;
-    right: 0;
+    right: -30px;
     z-index: 1;
   }
 
