--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -2,6 +2,9 @@
 @import "../../styles/mixins";
 
 .common-section {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
   overflow: hidden;
   position: relative;
 
@@ -98,6 +101,8 @@
   }
 
   &__component {
+    display: flex;
+    flex-direction: column;
     width: 100%;
   }
 
