--- a/src/components/BigCards/BigCards.scss
+++ b/src/components/BigCards/BigCards.scss
@@ -6,11 +6,7 @@
   gap: 25px;
   justify-content: space-between;
 
-  &--wrap {
-    flex-wrap: wrap;
-
-    > li {
-      width: calc((100% - 25px) / 2);
-    }
+  > li {
+    width: 100%;
   }
 }
