--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -32,6 +32,10 @@ $green-color: #95edb2;
 $cream-gradient-dark: linear-gradient(0deg, #fff8b7 0%, #ffefb7 100%);
 $cream-gradient-light: linear-gradient(180deg, #fffbe7 0%, #fffcef 22.67%),
   linear-gradient(180deg, #fff6bf 0%, #fece22 100%);
+$yellow-gradient: linear-gradient(180deg, #ffe587 0%, #ffe587 100%);
+$red-gradient: linear-gradient(180deg, #ffcf9a 0%, #ffddb9 100%);
+$green-gradient: linear-gradient(180deg, #d9f7cc 0%, #e8fbe5 100%);
+$grey-gradient: linear-gradient(180deg, #d9ecf9 0%, #ccd5e2 100%);
 
 $font-spoof-trail: var(--font-spoof-trial), sans-serif;
 $font-inter: var(--font-inter), sans-serif;
