--- a/src/components/AccordionSection/AccordionSection.scss
+++ b/src/components/AccordionSection/AccordionSection.scss
@@ -13,6 +13,9 @@
   }
 
   &__content {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
     max-width: 375px;
     transition: all 430ms ease-out;
   }
@@ -20,6 +23,11 @@
   &__title {
     @include title;
     text-align: left;
+  }
+
+  &__link {
+    @include buttonBlue;
+    margin: 8px 0 0 0;
   }
 
   &__list {
