--- a/src/components/Theme/Theme.scss
+++ b/src/components/Theme/Theme.scss
@@ -2,6 +2,12 @@
 @import "../../styles/mixins";
 
 .theme {
+  &--standard {
+    &:hover {
+      transform: translate(0, 40px);
+    }
+  }
+
   &-card {
     border-radius: 24px;
     box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
@@ -170,7 +176,7 @@
       position: absolute;
       z-index: 3;
 
-      a {
+      span {
         border-radius: 50%;
         box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
         -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
